--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-signup-login-component": "^1.2.0",
     "react-stripe-elements": "^3.0.0",
     "reactstrap": "^8.0.0",
+    "semantic-ui-css": "^2.4.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
